--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "server for beta-manager project",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node ./server.js"
   },
   "author": "Pranav Kulkarni",
   "license": "ISC",
